# QA-LLM-API

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: api.py  main.py  schema.py  settings.py  utils.py
test_db/: chroma.sqlite3
testdata/: concrete-problem-AI.json  concrete-problem-ai-questions.json  google_security_questions.json
tests/: test_llm_service.py
