[tool.poetry]
name = "llm-api"
version = "0.1.0"
description = "This project provides API to interact with OpenAPI ChatGPT 3.5 model."
authors = ["Shivam Singhal <shivam.singhal212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.348"
openai = "^1.3.7"
python-dotenv = "^1.0.0"
pypdf = "^3.17.1"
chromadb = "^0.4.18"
tiktoken = "^0.5.2"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.6"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
